Fixed text overflow but still missing the ...

--- a/vera-react-app/src/components/ResourcePageTile/ResourcePageTile.css
+++ b/vera-react-app/src/components/ResourcePageTile/ResourcePageTile.css
@@ -3,7 +3,6 @@
   border-radius: 30px;
   box-shadow: 4px 4px 15px rgba(114, 141, 149, 0.15);
   height: 280px;
-  overflow: hidden;
   position: relative;
   width: 280px;
 }
@@ -22,13 +21,15 @@
   font-weight: 600;
   line-height: 30px;
   padding: 0 14px;
+  padding-top: 10px;
   text-transform: uppercase;
 }
 
 .content-box{
   height:130px;
-  overflow:hidden;
   width: 246px;
+  overflow:hidden;
+  padding-bottom: 0px;
 }
 
 .info-text {
@@ -41,8 +42,6 @@
   font-weight: 400;
   line-height: 26px;
   margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
   left: 22px;
   padding: 0 10px 0 22px;
 }
